correcting spacing in %age

--- a/src/components/heading/heading.css
+++ b/src/components/heading/heading.css
@@ -9,7 +9,7 @@
 	 text-align: center;
 	 display: flex;
 	 justify-content: center;
-	 margin-top: 15px;
+	 margin-top: 1.7%;
 }
  .sub {
 	 color: #64dcdc;
