--- a/src/components/timer/timer.css
+++ b/src/components/timer/timer.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 15px;
+  margin-top: 1.8%;
   margin-bottom: 0px;
 }
 span#procent {
